--- a/server/package.json
+++ b/server/package.json
@@ -22,13 +22,17 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.0.0",
     "@types/request-promise-native": "^1.0.16",
+    "mongoose": "^5.6.8",
+    "nestjs-typegoose": "^5.2.1",
     "reflect-metadata": "^0.1.12",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "typegoose": "^5.9.0"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
