--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.0.0",
     "@types/request-promise-native": "^1.0.16",
+    "class-validator": "^0.10.1",
     "mongoose": "^5.6.8",
     "nestjs-typegoose": "^5.2.1",
     "reflect-metadata": "^0.1.12",
