--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,9 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.0.0",
+    "@types/argon2": "^0.15.0",
     "@types/request-promise-native": "^1.0.16",
+    "argon2": "^0.25.0",
     "class-validator": "^0.10.1",
     "mongoose": "^5.6.8",
     "nestjs-typegoose": "^5.2.1",
