--- a/server/package.json
+++ b/server/package.json
@@ -1,72 +1,74 @@
 {
-  "name": "server",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "license": "MIT",
-  "scripts": {
-    "build": "tsc -p tsconfig.build.json",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "concurrently --handle-input \"wait-on dist/main.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
-    "start:debug": "nodemon --config nodemon-debug.json",
-    "prestart:prod": "rimraf dist && npm run build",
-    "start:prod": "node dist/main.js",
-    "lint": "tslint -p tsconfig.json -c tslint.json",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
-  },
-  "dependencies": {
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
-    "@nestjs/mongoose": "^6.1.2",
-    "@nestjs/platform-express": "^6.0.0",
-    "@types/argon2": "^0.15.0",
-    "@types/request-promise-native": "^1.0.16",
-    "argon2": "^0.25.0",
-    "class-validator": "^0.10.1",
-    "mongoose": "^5.6.8",
-    "nestjs-typegoose": "^5.2.1",
-    "reflect-metadata": "^0.1.12",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.7",
-    "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3",
-    "typegoose": "^5.9.0"
-  },
-  "devDependencies": {
-    "@nestjs/testing": "^6.0.0",
-    "@types/express": "^4.16.0",
-    "@types/jest": "^23.3.13",
-    "@types/node": "^10.12.18",
-    "@types/supertest": "^2.0.7",
-    "concurrently": "^4.1.0",
-    "jest": "^23.6.0",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.15.3",
-    "supertest": "^3.4.1",
-    "ts-jest": "24.0.2",
-    "ts-node": "8.1.0",
-    "tsconfig-paths": "3.8.0",
-    "tslint": "5.16.0",
-    "typescript": "3.4.3",
-    "wait-on": "^3.2.0"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  }
+	"name": "server",
+	"version": "0.0.1",
+	"description": "",
+	"author": "",
+	"license": "MIT",
+	"scripts": {
+		"build": "tsc -p tsconfig.build.json",
+		"format": "prettier --write \"src/**/*.ts\"",
+		"start": "ts-node -r tsconfig-paths/register src/main.ts",
+		"start:dev": "concurrently --handle-input \"wait-on dist/main.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
+		"start:debug": "nodemon --config nodemon-debug.json",
+		"prestart:prod": "rimraf dist && npm run build",
+		"start:prod": "node dist/main.js",
+		"lint": "tslint -p tsconfig.json -c tslint.json",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:cov": "jest --coverage",
+		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+		"test:e2e": "jest --config ./test/jest-e2e.json"
+	},
+	"dependencies": {
+		"@nestjs/common": "^6.0.0",
+		"@nestjs/core": "^6.0.0",
+		"@nestjs/mongoose": "^6.1.2",
+		"@nestjs/platform-express": "^6.0.0",
+		"@types/argon2": "^0.15.0",
+		"@types/mongoose": "^5.5.20",
+		"@types/request-promise-native": "^1.0.16",
+		"argon2": "^0.25.0",
+		"class-validator": "^0.10.1",
+		"core-util-is": "^1.0.2",
+		"mongoose": "^5.6.8",
+		"nestjs-typegoose": "^5.2.1",
+		"reflect-metadata": "^0.1.12",
+		"request": "^2.88.0",
+		"request-promise-native": "^1.0.7",
+		"rimraf": "^2.6.2",
+		"rxjs": "^6.3.3",
+		"typegoose": "^5.9.0"
+	},
+	"devDependencies": {
+		"@nestjs/testing": "^6.0.0",
+		"@types/express": "^4.16.0",
+		"@types/jest": "^23.3.13",
+		"@types/node": "^10.12.18",
+		"@types/supertest": "^2.0.7",
+		"concurrently": "^4.1.0",
+		"jest": "^23.6.0",
+		"nodemon": "^1.18.9",
+		"prettier": "^1.15.3",
+		"supertest": "^3.4.1",
+		"ts-jest": "24.0.2",
+		"ts-node": "8.1.0",
+		"tsconfig-paths": "3.8.0",
+		"tslint": "5.16.0",
+		"typescript": "3.4.3",
+		"wait-on": "^3.2.0"
+	},
+	"jest": {
+		"moduleFileExtensions": [
+			"js",
+			"json",
+			"ts"
+		],
+		"rootDir": "src",
+		"testRegex": ".spec.ts$",
+		"transform": {
+			"^.+\\.(t|j)s$": "ts-jest"
+		},
+		"coverageDirectory": "../coverage",
+		"testEnvironment": "node"
+	}
 }
