--- a/server/package.json
+++ b/server/package.json
@@ -22,16 +22,19 @@
 	"dependencies": {
 		"@nestjs/common": "^6.0.0",
 		"@nestjs/core": "^6.0.0",
+		"@nestjs/jwt": "^6.1.1",
 		"@nestjs/mongoose": "^6.1.2",
 		"@nestjs/platform-express": "^6.0.0",
 		"@types/argon2": "^0.15.0",
 		"@types/mongoose": "^5.5.20",
+		"@types/passport-jwt": "^3.0.2",
 		"@types/request-promise-native": "^1.0.16",
 		"argon2": "^0.25.0",
 		"class-validator": "^0.10.1",
 		"core-util-is": "^1.0.2",
 		"mongoose": "^5.6.8",
 		"nestjs-typegoose": "^5.2.1",
+		"passport-jwt": "^4.0.0",
 		"reflect-metadata": "^0.1.12",
 		"request": "^2.88.0",
 		"request-promise-native": "^1.0.7",
