--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,8 @@
 		"@types/passport-jwt": "^3.0.2",
 		"@types/request-promise-native": "^1.0.16",
 		"argon2": "^0.25.0",
-		"class-validator": "^0.10.1",
+		"class-transformer": "^0.2.3",
+		"class-validator": "^0.7.3",
 		"core-util-is": "^1.0.2",
 		"mongoose": "^5.6.8",
 		"nestjs-typegoose": "^5.2.1",
