--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,4 +42,6 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=user1
       - MONGO_INITDB_ROOT_PASSWORD=pass1
       - MONGO_INITDB_DATABASE=smart_reach_tech
+    volumes:
+      - ./mongodb/data:/data/db
       
