--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "jw-angular-pagination": "^1.1.0",
     "ngx-cookie-service": "^2.2.0",
     "ngx-spinner": "^8.0.3",
     "popper.js": "^1.16.0",
