--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
 		"@nestjs/mongoose": "^6.1.2",
 		"@nestjs/passport": "^6.1.0",
 		"@nestjs/platform-express": "^6.9.0",
+		"@sendgrid/mail": "^6.5.0",
 		"@types/argon2": "^0.15.0",
 		"@types/mongoose": "^5.5.20",
 		"@types/passport-jwt": "^3.0.2",
